Acertos nos arquivos da publicacção ICTAI2013.

--- a/doc/pubs/ICTAI2013/exp.tex
+++ b/doc/pubs/ICTAI2013/exp.tex
@@ -179,7 +179,7 @@ optimal solution found. Small relative differences are darker than large diferen
 \begin{figure}
 \centering
 %\missingfigure[figwidth=8cm]{}
-\includegraphics[scale=0.73, trim=1cm 0 0 0]{figs/comp_very_hard.pdf}
+%\includegraphics[scale=0.73, trim=1cm 0 0 0]{figs/comp_very_hard.pdf}
 \caption{Comparison between the optimal solution (when available) 
 and the solution by the meta-heuristics for $\alpha=0.0$.}
 \label{fig:mh1_1}
