--- a/doc/pubs/ICTAI2013/paper.tex
+++ b/doc/pubs/ICTAI2013/paper.tex
@@ -88,14 +88,14 @@ Optimization; Meta-heuristics; Knapsack; Experimental Evaluation.
 
 \input{defi.tex}
 
-\input{related.tex}
+%\input{related.tex}
 % \input{knap.tex}
 
 \input{alter.tex}
 
 \input{exp.tex}
 
-\input{conclu.tex}
+%\input{conclu.tex}
 
 \printbibliography
 
