--- a/doc/pubs/ICTAI2013/ref.bib
+++ b/doc/pubs/ICTAI2013/ref.bib
@@ -1,17 +1,67 @@
-@ARTICLE{david2005,
-    author = {David Pisinger},
-    title = {Where are the hard knapsack problems},
-    journal = {Computers and Operations Research},
-    year = {2005},
-    volume = {32}
+@article{lawler1966branch,
+  title={Branch-and-bound methods: A survey},
+  author={Lawler, Eugene L and Wood, David E},
+  journal={Operations research},
+  volume={14},
+  number={4},
+  pages={699--719},
+  year={1966},
+  publisher={INFORMS}
 }
 
-@book{glover1997tabu,
-  title={Tabu search},
-  author={Glover, Fred and Laguna, Manuel and others},
-  volume={22},
-  year={1997},
+@book{japkowicz2011evaluating,
+ title={Evaluating Learning Algorithms: A Classification Perspective},
+ author={Japkowicz, N. and Shah, M.},
+ isbn={9780521196000},
+ year={2011},
+ publisher={Cambridge University Press}
+}
+
+
+@book{brownlee2011clever,
+  title={Clever algorithms: nature-inspired programming recipes},
+  author={Brownlee, Jason},
+  year={2011},
+  publisher={Jason Brownlee}
+}
+
+@article{dawande2000approximation,
+  title={Approximation algorithms for the multiple knapsack problem with assignment restrictions},
+  author={Dawande, Milind and Kalagnanam, Jayant and Keskinocak, Pinar and Salman, F Sibel and Ravi, R},
+  journal={Journal of combinatorial optimization},
+  volume={4},
+  number={2},
+  pages={171--186},
+  year={2000},
   publisher={Springer}
+}
+
+@incollection{puchinger2006core,
+  title={The core concept for the multidimensional knapsack problem},
+  author={Puchinger, Jakob and Raidl, G{\"u}nther R and Pferschy, Ulrich},
+  booktitle={Evolutionary Computation in Combinatorial Optimization},
+  pages={195--208},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{lai2006knapsack,
+  title={The Knapsack Problem and Fully Polynomial Time Approximation Schemes (FPTAS)},
+  author={Lai, Katherine and Goemans, MX},
+  journal={Retrieved November},
+  volume={3},
+  pages={2012},
+  year={2006}
+}
+
+@article{dantzig1955generalized,
+  title={The generalized simplex method for minimizing a linear form under linear inequality restraints},
+  author={Dantzig, George B and Orden, Alex and Wolfe, Philip},
+  journal={Pacific Journal of Mathematics},
+  volume={5},
+  number={2},
+  pages={183--195},
+  year={1955}
 }
 
 @report{ANEEL2012,
@@ -30,28 +80,20 @@
   booktitle={Algorithms — ESA 2002},
   volume={2461},
   series={Lecture Notes in Computer Science},
-  editor={Möhring, Rolf and Raman, Rajeev},
-  doi={10.1007/3-540-45749-6_54},
   title={Partially-Ordered Knapsack and Applications to Scheduling},
-  url={http://dx.doi.org/10.1007/3-540-45749-6_54},
   publisher={Springer Berlin Heidelberg},
   author={Kolliopoulos, Stavros G. and Steiner, George},
-  pages={612-624},
-  language={English}
+  pages={612-624}
 }
 
 @article{neighbourkp2009,
   author = {Borradaile, G. and Heeringa, B. and Wilfong, G.},
   title = {The Knapsack Problem with Neighbour Constraints},
   journal = {ArXiv e-prints},
-  archivePrefix = {"arXiv"},
-  eprint = {0910.0777},
-  primaryClass = {"cs.DS"},
   keywords = {Computer Science - Data Structures and Algorithms, Computer Science - Discrete Mathematics},
   year = 2009,
   month = oct,
-  adsurl = {http://adsabs.harvard.edu/abs/2009arXiv0910.0777B},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+  adsurl = {http://adsabs.harvard.edu/abs/2009arXiv0910.0777B}
 }
 
 @inproceedings{vasquez2001,
@@ -86,3 +128,48 @@ issue = {2},
 doi = {10.1287/ijoc.1090.0344},
 masid = {4572817}
 }
+
+@article{pisinger1995,
+author = {David Pisinger},
+title = {{Algorithms for Knapsack Problems}},
+year = {1995},
+masid = {65872}
+}
+
+@ARTICLE{david2005,
+    author = {David Pisinger},
+    title = {Where are the hard knapsack problems},
+    journal = {Computers and Operations Research},
+    year = {2005},
+    volume = {32}
+}
+@book{glover1997tabu,
+    title={Tabu search},
+    author={Glover, Fred and Laguna, Manuel and others},
+    volume={22},
+    year={1997},
+    publisher={Springer}
+}
+
+@article{garey1978,
+    author = {Garey, M. R. and Johnson, D. S.},
+    title = {Strong NP-Completeness Results: Motivation, Examples, and Implications},
+    journal = {J. ACM},
+    issue_date = {July 1978},
+    volume = {25},
+    number = {3},
+    month = jul,
+    year = {1978},
+    pages = {499--508},
+    numpages = {10},
+    doi = {10.1145/322077.322090},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+} 
+
+@misc{GLPK,
+  author       = {GLPK},
+  title        = {{GNU Linear Programming Kit}},
+  howpublished = {\\{\tt http://www.gnu.org/software/glpk}},
+}
+
