Texs originais copiados para o COCOON.

--- a/doc/pubs/COCOON2014/paper/paper.tex
+++ b/doc/pubs/COCOON2014/paper/paper.tex
@@ -8,6 +8,8 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 \usepackage{todonotes}
 \usepackage{hyperref}
 
@@ -42,7 +44,7 @@ the techniques considering running time and solution quality.
 
 \section{Introduction}
 \label{sec:introduction}
-\input{texs/Introduction.tex}
+\input{texs/introduction.tex}
 
 \section{Problem Definition}
 \label{sec:definition}
